Fixes #158. Hero banner wrapping. (#162)

--- a/site/src/app/styles/_main.scss
+++ b/site/src/app/styles/_main.scss
@@ -547,6 +547,7 @@ ul {
     font-family: 'Open Sans', sans-serif;
     font-size: 3.5em;
     font-weight: 300;
+    white-space: nowrap;
 }
 
 .hero-banner p {
